Fixed horizontal scroll on Mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -454,25 +454,28 @@ button:hover {
   margin-top: 1%;
   margin-left: 2rem;
   margin-right: 2rem;
-  width: 50%;
+  width: 40%;
 }
 
-.landingImg{
-  width: 60%;
+.landingImg.desktop{
+  width: 55%;
   float: right;
   position: absolute;
-  top: 6.25rem;
-  right: -3.75rem;
-  transform: rotate(-5deg);
+  top: 6.5rem;
+  right: 0;
   filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.5));
-  transition: transform 0.3s ease; 
-  border-radius: 15rem;
+  transition: transform 0.3s ease;
   overflow-x: hidden;
+}
+
+.landingImg.mobile {
+  display: none;
+  transition: transform 0.3s ease;
 }
 
 @media (max-width: 1110px) {
   /* CSS that should be displayed if width is less than or more than 1110px goes here */
-  .landingImg {
+  .landingImg.desktop {
   width: 55%;
   top: 8rem;
   }
@@ -480,7 +483,7 @@ button:hover {
 
 @media (max-width: 950px) {
   /* CSS that should be displayed if width is less than or more than 920px goes here */
-  .landingImg {
+  .landingImg.desktop {
   width: 55%;
   top: 25%;
   }
@@ -693,12 +696,17 @@ button:hover {
     align-items: center;
   }
 
-  .landingImg {
+  .landingImg.mobile {
+    display: inline;
     position: static;
     float: none;
     top: 5rem;
     right: auto;
     width: 80%;
+  }
+
+  .landingImg.desktop {
+    display: none;
   }
 
   .landingPage h5 {
